
<resources>
    <string name="app_name">Ethereum Wallet</string>

    <!--Controller Names-->
    <string name="controller_transactions_title">Transactions</string>
    <string name="controller_send_title">Send</string>
    <string name="controller_receive_title">Receive</string>
    <string name="controller_create_account_title">Create Account</string>
    <string name="controller_node_details_title">Node Details</string>
    <string name="controller_settings_title">Settings</string>

    <!--Common-->
    <string name="common_password">Password</string>
    <string name="common_ok">OK</string>

    <!--Create Account-->
    <string name="controller_create_account_set_password_message">Set a password for your Ethereum wallet. If forgotten it cannot be recovered. A new account can be created at any time, rendering this account inactive. Inactive accounts can be reactivated from the settings.</string>
    <string name="controller_create_account_enter_password_error">Enter a password</string>

    <!--Transactions-->
    <string name="controller_transactions_info_message">Searching the blockchain for transactions is time consuming. We search from the current block back in time until either a page of transactions are found or a threshold number of blocks searched is reached. This means there could be gaps between transactions shown where transactions have occurred but are not shown.</string>
    <string name="controller_transactions_select_range_error">Enter a number between 0 and the current block height</string>

    <!--Send-->
    <string name="controller_send_amount">Amount</string>
    <string name="controller_send_recipient_address">Recipient Address</string>
    <string name="controller_send_send_button">Send Ether</string>
    <string name="controller_send_enter_an_address">Enter an address</string>
    <string name="controller_send_enter_an_amount">Enter an amount</string>
    <string name="controller_send_enter_password">Enter the account\'s password</string>
    <string name="controller_send_success_dialog_title">Transaction Submitted Successfully</string>
    <string name="controller_send_success_dialog_message">Your transaction will appear on the Ethereum network soon and the recipient will receive their funds</string>
    <string name="controller_send_error_dialog_title">Error Submitting Transaction</string>
    <string name="controller_send_error_dialog_message">There are various reasons your transaction was not submitted successfully. The password could be incorrect. The recipient address may be incorrect. The amount may be more than available. We may not be connected to the Ethereum network.</string>

    <!--Receive-->
    <string name="controller_receive_ethereum_address">Ethereum Address:</string>
    <string name="controller_receive_receive_amount">Receive amount</string>
    <string name="controller_receive_create_qr_code">Create QR Code</string>
    <string name="controller_receive_eth_balance">ETH: %1$s</string>

    <!--Settings-->
    <string name="controller_settings_active_address">Current active address</string>
    <string name="controller_settings_change_address">Change address</string>
    <string name="controller_settings_new_address">New</string>
    <string name="controller_settings_delete_address">Delete</string>
    <string name="controller_settings_delete_address_dialog_title">Delete active address</string>
    <string name="controller_settings_delete_address_dialog_message">This action cannot be undone. Any Ether in this wallet will be lost. To delete this address, enter its password:</string>
    <string name="controller_settings_delete_address_cancel">Cancel</string>
    <string name="controller_settings_address_deleted">Address deleted, create a new one or change address</string>
    <string name="controller_settings_incorrect_password">Incorrect Password</string>
    <string name="controller_settings_incorrect_password_message">The active address was not deleted, please try again</string>
    <string name="controller_settings_select_new_address">Select New Address</string>

    <!--Error messages-->
    <string name="error_storage">Error loading from storage, content may not be as expected</string>
    <string name="error_internet_disconnected">Internet disconnected, the content was not updated</string>
    <string name="error_network">Error fetching data, the content was not updated</string>
    <string name="error_unknown">An unknown error occurred, the content may not be as expected</string>
</resources>
