<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/controller_settings_active_address"
            style="@style/Text.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

        <TextView
            tools:text="a9c8h34983jdoqwj0493qjf409qj"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:id="@+id/controller_settings_current_address"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"/>

        <Button
            android:text="@string/controller_settings_change_address"
            android:theme="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/controller_settings_change_address"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/controller_settings_current_address"
            app:layout_constraintRight_toLeftOf="@+id/controller_settings_delete_address"
            app:layout_constraintLeft_toRightOf="@+id/controller_settings_new_address"
            app:layout_constraintHorizontal_bias="0.5"/>

        <Button
            android:text="@string/controller_settings_new_address"
            android:theme="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/controller_settings_new_address"
            app:layout_constraintRight_toLeftOf="@+id/controller_settings_change_address"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/controller_settings_change_address"
            />

        <Button
            android:text="@string/controller_settings_delete_address"
            android:theme="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/controller_settings_delete_address"
            app:layout_constraintTop_toTopOf="@+id/controller_settings_change_address"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/controller_settings_change_address"
            />
    </android.support.constraint.ConstraintLayout>

</ScrollView>