<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:text="Pending:"
            style="@style/Text.Title"
            android:textColor="@color/secondary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView16"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView10"/>

        <TextView
            tools:text="0.00123"
            android:text="-"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/controller_send_pending_balance"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView10"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/textView16"/>

        <TextView
            android:text="Balance:"
            style="@style/Text.Title"
            android:textColor="@color/secondary_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView10"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"/>

        <TextView
            tools:text="0.00123"
            android:text="-"
            style="@style/Text.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/controller_send_current_balance"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/textView10"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            style="@style/Text.Display"
            android:text="Send Ether"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="32dp"
            android:id="@+id/textView"/>

        <com.github.willjgriff.ethereumwallet.ui.widget.validatedtextinput.ValidatedTextInputLayout
            android:id="@+id/controller_send_amount"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintTop_toBottomOf="@+id/controller_send_recipient_address"
            android:layout_marginTop="8dp"
            android:layout_width="0dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:hint="@string/controller_send_amount"
            android:inputType="numberDecimal"
            app:validator="notEmpty"
            app:error_text="@string/controller_send_enter_an_amount"/>

        <com.github.willjgriff.ethereumwallet.ui.widget.validatedtextinput.ValidatedTextInputLayout
            android:id="@+id/controller_send_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/controller_send_amount"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/common_password"
            android:inputType="textPassword"
            app:validator="notEmpty"
            app:error_text="@string/controller_send_enter_password"/>

        <Button
            android:id="@+id/controller_send_send_ether"
            android:text="@string/controller_send_send_button"
            android:theme="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/controller_send_password"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.51"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="16dp"/>

        <com.github.willjgriff.ethereumwallet.ui.widget.validatedtextinput.ValidatedTextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/controller_send_recipient_address"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:hint="@string/controller_send_recipient_address"
            android:inputType="text"
            app:validator="notEmpty"
            app:error_text="@string/controller_send_enter_an_address"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView16"/>


    </android.support.constraint.ConstraintLayout>
</ScrollView>