<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_vertical">

    <include
        android:id="@+id/controller_create_account_toolbar"
        layout="@layout/toolbar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        />

    <TextView
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/xsmall"
        android:text="@string/controller_create_account_set_password_message"
        android:id="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/controller_create_account_password_text_input"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginLeft="24dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintTop_toBottomOf="@+id/controller_create_account_toolbar"
        app:layout_constraintVertical_chainStyle="packed"/>

    <Button
        android:id="@+id/controller_create_account_create_button"
        android:theme="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/controller_create_account_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/controller_create_account_password_text_input"
        app:layout_constraintHorizontal_bias="0.502"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/controller_create_account_password_text_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/medium"
        android:paddingStart="@dimen/medium"
        android:paddingRight="@dimen/medium"
        android:paddingEnd="@dimen/medium"
        android:paddingBottom="@dimen/xsmall"
        android:gravity="center"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintBottom_toTopOf="@+id/controller_create_account_create_button"
        app:layout_constraintHorizontal_bias="0.0"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/controller_create_account_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/common_password"/>

    </android.support.design.widget.TextInputLayout>

</android.support.constraint.ConstraintLayout>