<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Text.Display"
            android:text="Receive Ether"
            android:gravity="center"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="32dp"
            android:id="@+id/textView"/>

        <TextView
            style="@style/Text.Headline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controller_receive_ethereum_address"
            android:gravity="center"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:id="@+id/textView3"
            android:layout_marginLeft="32dp"
            android:layout_marginStart="32dp"
            app:layout_constraintVertical_chainStyle="spread_inside"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/controller_receive_ethereum_address"
            style="@style/Text.Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="ADLK435ofdij45FDG54oijg45F4Jer45tADF433ASDF"
            android:textIsSelectable="true"
            android:layout_marginRight="32dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginEnd="32dp"
            android:layout_marginLeft="32dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:layout_marginTop="6dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3"/>


        <Button
            android:id="@+id/controller_receive_detail_button"
            android:theme="@style/ButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/controller_receive_create_qr_code"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:layout_constraintRight_creator="1"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            app:layout_constraintRight_toRightOf="parent"
            tools:layout_constraintLeft_creator="1"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginLeft="@dimen/medium"
            android:layout_marginRight="@dimen/medium"
            android:id="@+id/textInputLayout"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/controller_receive_ethereum_address">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:hint="@string/controller_receive_receive_amount"/>

        </android.support.design.widget.TextInputLayout>

    </android.support.constraint.ConstraintLayout>

</ScrollView>